--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,37 @@
 asgiref==3.8.1
 asttokens==2.4.1
 colorama==0.4.6
-comm==0.2.1
-contourpy==1.3.0
-cycler==0.12.1
-debugpy==1.8.0
+comm==0.2.2
+debugpy==1.8.5
 decorator==5.1.1
-Django==5.0.7
-executing==2.0.1
-fonttools==4.54.1
-ipykernel==6.29.0
-ipython==8.20.0
+Django==5.1
+executing==2.1.0
+ipykernel==6.29.5
+ipython==8.27.0
 jedi==0.19.1
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-kiwisolver==1.4.7
-matplotlib==3.9.2
-matplotlib-inline==0.1.6
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
-numpy==1.26.4
-packaging==23.2
+numpy==2.1.0
+packaging==24.1
 pandas==2.2.2
-parso==0.8.3
-pillow==11.0.0
-platformdirs==4.1.0
-prompt-toolkit==3.0.43
-psutil==5.9.8
-pure-eval==0.2.2
-Pygments==2.17.2
-pyparsing==3.2.0
-python-dateutil==2.8.2
-pywin32==306
-pyzmq==25.1.2
-scipy==1.14.1
-setuptools==69.5.1
+parso==0.8.4
+platformdirs==4.3.2
+prompt_toolkit==3.0.47
+psutil==6.0.0
+pure_eval==0.2.3
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pyzmq==26.2.0
 six==1.16.0
 sqlparse==0.5.1
 stack-data==0.6.3
-tornado==6.4
-traitlets==5.14.1
+tornado==6.4.1
+traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2024.1
 wcwidth==0.2.13
-wheel==0.43.0
-gunicorn == 22.0.0 
+gunicorn == 22.0.0
+whitenoise == 6.8.2
